# yu-toy-browser

./: .gitignore  CMakeLists.txt  main.cpp
Factory/ElementNodeFactory/: ElementNodeFactory.cpp  ElementNodeFactory.hpp  IElementNodeFactory.hpp
Factory/LayoutFactory/: ElementNodeLayoutFactory.cpp  ElementNodeLayoutFactory.hpp  ILayoutFactory.hpp
Factory/TextSizeFactory/: ITextSizeFactory.hpp  TextSizeFactory.cpp  TextSizeFactory.hpp
Node/: ElementNode.cpp  ElementNode.hpp  Node.cpp  Node.hpp  TextNode.cpp  TextNode.hpp
Node/Elements/: A.cpp  A.hpp  B.cpp  B.hpp  Body.cpp  Body.hpp  Div.cpp  Div.hpp  Em.cpp  Em.hpp  H1.cpp  H1.hpp  H2.cpp  H2.hpp  Head.cpp  Head.hpp  Html.cpp  Html.hpp  Img.cpp  Img.hpp  Li.cpp  Li.hpp  P.cpp  P.hpp  Span.cpp  Span.hpp  Text.cpp  Text.hpp  Title.cpp  Title.hpp  Ul.cpp  Ul.hpp
examples/: example.html  first_step.html  layout.html
layout/: LayoutConstants.cpp  LayoutConstants.hpp  StyledNode.cpp  StyledNode.hpp
parse/: parseHTML.cpp  parseHTML.hpp
render/: render_window.cpp  render_window.hpp
src/: main.cpp
src/Factory/ElementNodeFactory/: ElementNodeFactory.cpp  ElementNodeFactory.h  IElementNodeFactory.h
src/Factory/LayoutFactory/: ElementNodeLayoutFactory.cpp  ElementNodeLayoutFactory.h  ILayoutFactory.h
src/Factory/TextSizeFactory/: ITextSizeFactory.h  TextSizeFactory.cpp  TextSizeFactory.h
src/Layout/: LayoutConstants.h  StyledNode.cpp  StyledNode.h
src/Node/: BlockElementNode.cpp  BlockElementNode.h  ElementNode.cpp  ElementNode.h  InlineElementNode.cpp  InlineElementNode.h  Node.cpp  Node.h  TextNode.cpp  TextNode.h
src/Node/Elements/: A.cpp  A.h  B.cpp  B.h  Body.cpp  Body.h  Div.cpp  Div.h  Em.cpp  Em.h  H1.cpp  H1.h  H2.cpp  H2.h  Head.cpp  Head.h  Html.cpp  Html.h  Img.cpp  Img.h  Li.cpp  Li.h  P.cpp  P.h  Span.cpp  Span.h  Text.cpp  Text.h  Title.cpp  Title.h  Ul.cpp  Ul.h
src/Parse/: parseHTML.cpp  parseHTML.h
src/Render/: Renderer.cpp  Renderer.h  Window.cpp  Window.h  render_functions.cpp  render_functions.h
src/WIndow/: Window.h
src/Window/: Window.cpp  Window.h
src/utils/shader/: shader.cpp  shader.h  text.v.glsl
utils/shader/: shader.cpp  shader.hpp
